--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -7,17 +7,22 @@
   border: 2px solid #f6623e;
   border-radius: 6px;
   overflow: hidden;
+  background-color: #f6623e;
 }
 .search__input {
-  width: calc(100% - 140px);
+  width: calc(100% - 100px - 40px);
   height: 100%;
-  font-size: 16px;
+  font-size: 17px;
   padding: 0 15px;
+  background-color: #fff;
 }
 .search__btn-reset {
   width: 40px;
   height: 100%;
+  transform: translateX(-2px);
   fill: #737373;
+  border-radius: 0 6px 6px 0;
+  background-color: #fff;
 }
 .search__btn-search {
   width: 100px;
