--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -9,18 +9,23 @@
   border: 2px solid $primary;
   border-radius: 6px;
   overflow: hidden;
+  background-color: $primary;
 
   &__input {
-    width: calc(100% - 140px);
+    width: calc(100% - 100px - 40px);
     height: 100%;
-    font-size: 16px;
+    font-size: 17px;
     padding: 0 15px;
+    background-color: $white;
   }
 
   &__btn-reset {
     width: 40px;
     height: 100%;
+    transform: translateX(-2px);
     fill: $light-4;
+    border-radius: 0 6px 6px 0;
+    background-color: $white;
   }
 
   &__btn-search {
